tests/snapshots/files__global_prove_query_proofs.snap
---
source: tests/files.rs
expression: snapshot
---




(let t (= (R 2) (R 2)))
(Congr t (Fiat t) (Fiat (= 2 2)) 0)
