tests/snapshots/files__herbie.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  String-13720301450033637972:
    op: "\"x\""
    children: []
    eclass: String-13720301450033637972
    cost: 0
  Var-13720301450033637972:
    op: Var
    children:
      - String-13720301450033637972
    eclass: "5"
    cost: 1
  Rational-11743562013128004906:
    op: (rational 2 1)
    children: []
    eclass: Rational-11743562013128004906
    cost: 0
  r-two-0:
    op: r-two
    children: []
    eclass: Rational-11743562013128004906
    cost: 9223372036854776000
  one-0:
    op: one
    children: []
    eclass: "1"
    cost: 9223372036854776000
  three-0:
    op: three
    children: []
    eclass: "3"
    cost: 9223372036854776000
  neg-one-0:
    op: neg-one
    children: []
    eclass: "4"
    cost: 9223372036854776000
  Rational-0:
    op: (rational 0 1)
    children: []
    eclass: Rational-0
    cost: 0
  Num-0:
    op: Num
    children:
      - Rational-0
    eclass: "0"
    cost: 1
  Rational-5871781006564002453:
    op: (rational 1 1)
    children: []
    eclass: Rational-5871781006564002453
    cost: 0
  Num-5871781006564002453:
    op: Num
    children:
      - Rational-5871781006564002453
    eclass: "1"
    cost: 1
  Num-11743562013128004906:
    op: Num
    children:
      - Rational-11743562013128004906
    eclass: "2"
    cost: 1
  Rational-17615343019692007359:
    op: (rational 3 1)
    children: []
    eclass: Rational-17615343019692007359
    cost: 0
  Num-17615343019692007359:
    op: Num
    children:
      - Rational-17615343019692007359
    eclass: "3"
    cost: 1
  r-one-0:
    op: r-one
    children: []
    eclass: Rational-5871781006564002453
    cost: 9223372036854776000
  zero-0:
    op: zero
    children: []
    eclass: "0"
    cost: 9223372036854776000
  two-0:
    op: two
    children: []
    eclass: "2"
    cost: 9223372036854776000
  x-0:
    op: x
    children: []
    eclass: "5"
    cost: 9223372036854776000
root_eclasses: []
class_data:
  "5":
    type: Math
  String-13720301450033637972:
    type: String
  Rational-11743562013128004906:
    type: Rational
  "1":
    type: Math
  "3":
    type: Math
  "4":
    type: Math
  "0":
    type: Math
  Rational-0:
    type: Rational
  Rational-5871781006564002453:
    type: Rational
  "2":
    type: Math
  Rational-17615343019692007359:
    type: Rational

