tests/snapshots/files__herbie_tutorial.snap
---
source: tests/files.rs
expression: snapshot_content
---
(bigrat (from-string "1") (from-string "1"))
(bigrat (from-string "2") (from-string "1"))
(bigrat (from-string "401") (from-string "201"))
(bigrat (from-string "401") (from-string "201"))
1.9950248756218905
10000.0
10000.0
Add: 4
Div: 2
Mul: 0
Num: 4
Var: 1
best-error: 0
lower-bound: 6
true-value: 6
upper-bound: 6
