tests/snapshots/files__hidden_print_size_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
Visible: 1
Visible: 1
Visible: 1
Visible: 1
