tests/snapshots/files__integer_math_desugar.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 331
Const: 6
Diff: 0
Div: 1
Integral: 0
LShift: 2
MathU: 36
Mod: 0
Mul: 190
Not: 2
Pow: 1
RShift: 0
Sub: 1
Var: 3
evals-to: 6
is-not-zero: 15
