tests/snapshots/files__integer_math_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (Mul (Var "a") (Pow (Const 2) (Const 3))))
(let t1 (Mul (Var "b") (Const 2)))
(let t2 (Sub t1 t1))
(let t3 (Add (Var "c") t2))
(let t4 (Div t0 t3))
(let t5 (LShift (Var "a") (Const 3)))
(let t6 (Not (Not (Const 1))))
(let t7 (Mul (Var "c") t6))
(let t8 (Div t5 t7))
(let prop0 (= t4 t8))
(let prf0 (Fiat (= t4 t4)))
(let t9 (Div t0 (Var "c")))
(let prop1 (= t4 t9))
(Trans
  prop0
  prf0
  (Trans
    prop0
    (Sym
      prop1
      (Sym
        (= t9 t4)
        (Congr
          prop1
          prf0
          (Rule
            (= t3 (Var "c"))
            (name "(rewrite (Add a (Const 0)) a)")
            (premises
              (Congr
                (= t3 (Add (Var "c") (Const 0)))
                (Fiat (= t3 t3))
                (Sym
                  (= t2 (Const 0))
                  (Rule
                    (= (Const 0) t2)
                    (name "(rewrite (Sub a a) (Const 0))")
                    (premises (Fiat (= t2 t2)))
                    (substitution (a t1) (@rewrite_var__15 t2))))
                1))
            (substitution (a (Var "c")) (@rewrite_var__12 t3)))
          1)))
    (Sym
      (= t9 t8)
      (Congr
        (= t8 t9)
        (Congr
          (= t8 (Div t0 t7))
          (Fiat (= t8 t8))
          (Rule
            (= t5 t0)
            (name "(rewrite (Mul x (Pow (Const 2) y)) (LShift x y))")
            (premises (Fiat (= t0 t0)))
            (substitution (y (Const 3)) (@rewrite_var__24 t0) (x (Var "a"))))
          0)
        (Rule
          (= t7 (Var "c"))
          (name "(rewrite (Mul a (Const 1)) a)")
          (premises
            (Congr
              (= t7 (Mul (Var "c") (Const 1)))
              (Fiat (= t7 t7))
              (Rule
                (= t6 (Const 1))
                (name "(rewrite (Not (Not x)) x)")
                (premises (Fiat (= t6 t6)))
                (substitution (@rewrite_var__26 t6) (x (Const 1))))
              1))
          (substitution (a (Var "c")) (@rewrite_var__14 t7)))
        1))))
Add: 331
Const: 6
Diff: 0
Div: 1
Integral: 0
LShift: 2
MathU: 36
Mod: 0
Mul: 190
Not: 2
Pow: 1
RShift: 0
Sub: 1
Var: 3
evals-to: 6
is-not-zero: 15
