tests/snapshots/files__integer_math_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 815
Add: 331
Const: 6
Const: 6
Diff: 0
Diff: 0
Div: 2
Div: 1
Integral: 0
Integral: 0
LShift: 2
LShift: 2
MathU: 61
MathU: 36
Mod: 0
Mod: 0
Mul: 413
Mul: 190
Not: 2
Not: 2
Pow: 1
Pow: 1
RShift: 0
RShift: 0
Sub: 1
Sub: 1
Var: 3
Var: 3
evals-to: 6
evals-to: 6
is-not-zero: 18
is-not-zero: 15
